fix(a11y): fix color contrast and add tooltips

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -165,7 +165,7 @@ section {
 
 .save-button {
     background-color: #f3f7fe;
-    color: #3b82f6;
+    color: #2263cd;
     border: none;
     border-radius: 8px;
     width: 70px;
